# VOXL2-Rangefinder-Service

./: CHANGELOG  CMakeLists.txt  README.md  install_build_deps.sh
bash_completions/: voxl-configure-rangefinders
include/: voxl_rangefinder_interface.h
pkg/control/: control
scripts/: voxl-configure-rangefinders
services/: voxl-rangefinder-server.service
src/: CMakeLists.txt  common.h  config_file.c  config_file.h  main.c  mavlink.c  mavlink.h  sf20c.c  sf20c.h  vl53l1x.c  vl53l1x.h  vl53l1x_registers.h
tools/: CMakeLists.txt  voxl-inspect-rangefinders.c
